--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<h1>Your next clue can be fouund in the library section ELE</h1>
+<h1>Your next clue can be found in the library section ELE</h1>
 <marquee>yipeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee</marquee>
